Add microsoft site validation meta tag

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -17,6 +17,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.webp" />
   <meta name="google-site-verification" content="Pf5dyk4f7lM-H5JMPc77WTTYj1jVIGOAISkUG49rBiA" />
+  <meta name="msvalidate.01" content="A7B8B5810CC3C1557EE083E15F137A3D" />
 
   <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
