Disable links for now

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -49,9 +49,12 @@
         Because you don't need a new Minecraft client
       </div>
       <div id="quick-links">
-        <a class="btn-hollow" href="https://github.com/Tomate0613/tomate-launcher/releases">Download</a>
-        <a class="btn-hollow" href="https://github.com/Tomate0613/tomate-launcher">Github</a>
-        <a class="btn-hollow" href="https://github.com/Tomate0613/tomate-launcher/wiki">Documentation</a>
+        <a class="btn-hollow" href="">Download</a>
+        <!-- https://github.com/Tomate0613/tomate-launcher/releases -->
+        <a class="btn-hollow" href="">Github</a>
+        <!-- https://github.com/Tomate0613/tomate-launcher -->
+        <a class="btn-hollow" href="">Documentation</a>
+        <!-- https://github.com/Tomate0613/tomate-launcher/wiki -->
       </div>
     </div>
     <div id="details">
