--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -44,7 +44,7 @@
   </header>
   <main>
     <div id="hero-section">
-      <div id="hero-heading">Tomate Launcher</div>
+      <h1 id="hero-heading">Tomate Launcher</h1>
       <div id="hero-subheading">
         Because you don't need a new Minecraft client
       </div>
@@ -59,14 +59,14 @@
     </div>
     <div id="details">
       <section>
-        <h1>Preview</h1>
+        <h2>Preview</h2>
         <div class="preview">
           <iframe src="pages/modpacks.html" title="Modpack page"></iframe>
           <div class="preview-description">This is what the main UI currently looks like</div>
         </div>
       </section>
       <section>
-        <h1>Development</h1>
+        <h2>Development</h2>
         Tomate Launcher is in closed development for now. But it will be open source once it releases.
         I wont tell you too much more about tomate-launcher for now.
         So here are some images of cats for you instead.
