Add cmd experiment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Hello World!</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/resources/style/style.css" />
+  <link rel="stylesheet" href="/resources/style/style2.css" />
   <script src="/resources/script/index.js" type="module"></script>
   <script src="/resources/script/excuses.js" type="module"></script>
 
@@ -21,23 +21,36 @@
 
 <body>
   <div id="container">
-    <div id="main">
-      <h1>Hello World!</h1>
-      <p>This is a simple web page.</p>
-      <div id="dev-excuse">
-        Could not load dev excuse
-      </div>
-    </div>
     <a id="msc" class="project project-left" tabindex="0" data-folder="/projects/msc/images" data-start="1"
       data-stop="4" href="/projects/msc/">
       <img width="100%" class="image" />
+      <div class="project-overlay">
+        <div class="project-name">Minecraft server control</div>
+        <div class="project-description">DO NOT USE THIS</div>
+      </div>
     </a>
+
+    <div id="main">
+      <a class="no-deco" href="./cmd.html">
+        <h1>Hello World!</h1>
+      </a>
+      <p>This is a simple web page.</p>
+      <div id="dev-excuse">Could not load dev excuse</div>
+    </div>
+
 
     <a id="tomate-launcher" class="project project-right" tabindex="0" data-folder="/projects/tomate-launcher/images"
       data-start="1" data-stop="1" href="/projects/tomate-launcher/">
       <img width="100%" class="image" />
+
+      <div class="project-overlay">
+        <div class="project-name">Tomate Launcher</div>
+        <div class="project-description">A Minecraft launcher designed to make playing modded Minecraft easier than ever
+          before</div>
+      </div>
     </a>
   </div>
+  <div id="particles"></div>
 </body>
 
 </html>
