--- a/cmd.html
+++ b/cmd.html
@@ -24,7 +24,6 @@
       <div class="blob blob-2"></div>
       <div class="blob blob-3"></div>
     </div>
-
   </div>
 
   <main id="console">
@@ -46,7 +45,7 @@
     <div>
       > nav
       <nav>
-        <a href="projects/tomate-launcher/" autofocus>Tomate Launcher</a>
+        <a href="projects/tomate-launcher/">Tomate Launcher</a>
         <a href="projects/tomate-launcher/">MCSC</a>
         <a href="projects/tomate-launcher/">Tomate Client</a>
       </nav>
@@ -94,7 +93,7 @@
     `puts "Hello World!"`,
     `fmt.print.Println("Hello World!")`,
     `cat("Hello World!")`,
-    `disp('Hello World!')`
+    `disp('Hello World!')`,
   ];
 
   const input = document.getElementById('input');
@@ -105,14 +104,13 @@
 
   const setText = (t) => {
     input.innerText = t;
-    output.style.display = (t === currentText) ? 'block' : 'none';
+    output.style.display = t === currentText ? 'block' : 'none';
     text = t;
-  }
+  };
 
   const q = setInterval(() => {
     if (currentText === text) {
-      if (Math.random() > 0.07)
-        return;
+      if (Math.random() > 0.07) return;
 
       currentText = texts.sort(() => Math.random() - 0.5)[0];
       return;
@@ -120,16 +118,14 @@
 
     for (let i = 1; i <= text.length; i++) {
       if (text[text.length - i] !== currentText[text.length - i]) {
-        if (Math.random() > 0.8)
-          return;
+        if (Math.random() > 0.8) return;
 
         setText(text.substring(0, text.length - 1));
         return;
       }
     }
 
-    if (Math.random() > 0.5)
-      return;
+    if (Math.random() > 0.5) return;
 
     setText(text + currentText[text.length]);
   }, 50);
@@ -147,10 +143,8 @@
 
     console.log(event);
 
-    if (event.key.length === 1)
-      setText(text + event.key);
-    else if (event.key === 'Backspace')
-      setText(text.slice(0, -1))
+    if (event.key.length === 1) setText(text + event.key);
+    else if (event.key === 'Backspace') setText(text.slice(0, -1));
     else if (event.key === 'Enter') {
       event.preventDefault();
       if (text === 'nvim') {
@@ -164,9 +158,7 @@
         setText('');
       }
     }
-
-  })
+  });
 </script>
-
 
 </html>
