Add link to zwietracht-js

--- a/dc-tools/index.html
+++ b/dc-tools/index.html
@@ -5,10 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discord Tools</title>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+  </style>
 </head>
 
 <body>
+  <h1>Discord Tools</h1>
   <a href="ansi">Ansi generator</a>
+  <a href="//github.com/tomate0613/zwietracht-js">Zwietracht - Serverless bot library</a>
 </body>
 
 </html>
