Let's see if this works

--- a/dc/index.html
+++ b/dc/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta property="og:image" content="./thumbnail.png">
+  <meta property="og:image" content="./thumbnail.webp">
   <meta property="og:type" content="video.other">
 
   <meta property="og:video:url"
