Maybe a png thumbnail works

--- a/dc/index.html
+++ b/dc/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta property="og:image" content="./thumbnail.webp">
+  <meta property="og:image" content="https://tomate.doublekekse.dev/dc/thumbnail.png">
   <meta property="og:type" content="video.other">
 
   <meta property="og:video:url"
