Fix overflow and improve navigation

--- a/cmd/index.html
+++ b/cmd/index.html
@@ -49,9 +49,9 @@
     <div>
       > nav
       <nav>
-        <a href="/tomate-launcher/">Tomate Launcher</a>
-        <a href="/dc-tools/">Discord Tools</a>
-        <a href="//modrinth.com/mod/total-dragon">Total Dragon</a>
+        <a href="/tomate-launcher/" tabindex="1">Tomate Launcher</a>
+        <a href="/dc-tools/" tabindex="2">Discord Tools</a>
+        <a href="//modrinth.com/mod/total-dragon" tabindex="3">Total Dragon</a>
       </nav>
     </div>
     <div>
