Add back dev excuses to the main page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./style.css" />
   <script src="/resources/script/index.js" type="module"></script>
+  <script src="/resources/script/excuses.js" type="module"></script>
 
   <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
@@ -21,9 +22,11 @@
 <body>
   <div id="main">
     <a class="no-deco" href="./cmd">
-      <h1>Hello World!</h1>
+      <h1>Hello World</h1>
     </a>
-    <p>This is a simple web page.</p>
+    <p id="dev-excuse">
+      Could not load dev excuse
+    </p>
   </div>
   <div id="container">
     <a class="project project-left image-cycle" tabindex="0" data-folder="/total-dragon/images"
