--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tomate Launcher</title>
   <meta http-equiv="refresh" content="0; url=https://tomate.doublekekse.dev/tomate-launcher" />
+  <link rel="canonical" href="https://tomate.doublekekse.dev/tomate-launcher" />
 </head>
 
 <body>
