Add links to released packages

--- a/tomate-launcher/index.html
+++ b/tomate-launcher/index.html
@@ -67,9 +67,27 @@
       </section>
       <section>
         <h2>Development</h2>
-        Tomate Launcher is in closed development for now. But it will be open source once it releases.
-        I wont tell you too much more about tomate-launcher for now.
-        So here are some images of cats for you instead.
+
+        TomateLauncher is currently in a closed development phase. While the launcher itself is not yet open source, all
+        the modules it depends on are already available as open source projects. We plan to open source the launcher
+        once it reaches a stable state.
+
+        <h3>Functional Packages</h3>
+
+        Here is a list of packages that are already functional and open source:
+
+        <div id="packages">
+          <a href="https://github.com/doublekekse/tomate-loaders">Tomate Loaders</a>
+          <a href="https://github.com/doublekekse/tomate-mods">Tomate Mods</a>
+          <a href="https://github.com/doublekekse/find-java">Find Java</a>
+        </div>
+
+
+      </section>
+      <section>
+        <h2>Cat Images</h2>
+
+        Here are some random and non related images of cats
         <div id="images">
           <img src="images/cat1.webp" alt="AI drawing of a cat in a minecraft world" />
           <img src="images/cat2.webp" alt="AI drawing of a cat in a minecraft world" />
