--- a/index.html
+++ b/index.html
@@ -1,56 +1,239 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <title>Hello World!</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="/resources/script/excuses.js" type="module"></script>
+    <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/resources/icons/safari-pinned-tab.svg" color="#da532c" />
+    <link rel="stylesheet" href="./style.css" />
 
-<head>
-  <title>Hello World!</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./style.css" />
-  <script src="/resources/script/index.js" type="module"></script>
-  <script src="/resources/script/excuses.js" type="module"></script>
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#da532c" />
+  </head>
 
-  <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-  <link rel="mask-icon" href="/resources/icons/safari-pinned-tab.svg" color="#da532c" />
+  <body>
+    <div id="background">
+      <div id="blob-container-text">
+        <div class="blob blob-1"></div>
+        <div class="blob blob-2"></div>
+        <div class="blob blob-3"></div>
+        <div class="blob blob-4" id="blob"></div>
 
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="theme-color" content="#da532c" />
-</head>
+        <script>
+          const blob = document.getElementById('blob');
+          let l = 0;
+          let t = 0;
 
-<body>
-  <div id="main">
-    <a class="no-deco" href="./cmd">
-      <h1>Hello World</h1>
-    </a>
-    <p id="dev-excuse">
-      Could not load dev excuse
-    </p>
-  </div>
-  <div id="container">
-    <a class="project project-left image-cycle" tabindex="0" data-folder="/total-dragon/images"
-      data-times="6000,12000,2200,1600" data-start="1" data-stop="4" data-filetype="webp"
-      href="//modrinth.com/mod/total-dragon">
-      <img width="100%" class="image" />
-      <div class="project-overlay">
-        <div class="project-name">Total Dragon</div>
-        <div class="project-description">A fabric mod impoving minecraft's end fight 🐲</div>
+          let targetX = 0;
+          let targetY = 0;
+
+          document.addEventListener('mousemove', () => {
+            targetX = event.clientX - 100;
+            targetY = event.clientY - 100;
+          });
+
+          setInterval(() => {
+            l = (l * 100 + targetX) / 101;
+            t = (t * 100 + targetY) / 101;
+
+            blob.style.left = `${l}px`;
+            blob.style.top = `${t}px`;
+            blob.style.position = 'fixed';
+          }, 50);
+        </script>
       </div>
-    </a>
+    </div>
 
+    <main id="console">
+      <h1>Tomate0613</h1>
 
-    <a class="project project-right" tabindex="0" href="/tomate-launcher">
-      <img src="/tomate-launcher/images/banner.webp" width="100%" class="image" />
-
-      <div class="project-overlay">
-        <div class="project-name">Tomate Launcher</div>
-        <div class="project-description">A Minecraft launcher designed to make playing modded Minecraft easier than ever
-          before</div>
+      <div>
+        > instructions
+        <div>use the tab key</div>
       </div>
-    </a>
-  </div>
-  <div id="particles"></div>
-</body>
+      <div>
+        > time
+        <div id="time">TIME</div>
+        <script>
+          setInterval(() => {
+            document.getElementById('time').innerText = new Date();
+          }, 1000);
+        </script>
+      </div>
+      <div>
+        > nav
+        <nav>
+          <a href="/tomate-launcher/" tabindex="1">
+            Tomate Launcher
 
+            <div class="preview">
+              <img src="/tomate-launcher/images/banner.webp" width="100%" class="image" />
+
+              <div class="project-overlay">
+                <div class="project-name">Tomate Launcher</div>
+                <div class="project-description">
+                  A Minecraft launcher designed to make playing modded Minecraft easier than ever
+                  before 🍅
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="/dc-tools/" tabindex="2">
+            Discord Tools
+
+            <div class="preview">
+              <img src="/dc-tools/ansi/images/example.png" width="100%" class="image" />
+
+              <div class="project-overlay">
+                <div class="project-name">Discord Tools</div>
+                <div class="project-description">A collection of tools for discord 💬</div>
+              </div>
+            </div>
+          </a>
+          <a href="/mods" tabindex="3">
+            Minecraft Mods
+
+            <div class="preview">
+              <img
+                width="100%"
+                class="img-cycle"
+                data-folder="/mods/images"
+                data-times="6000,12000,2200,1600,10000"
+                data-random="true"
+                data-start="1"
+                data-filetype="webp"
+              />
+
+              <div class="project-overlay">
+                <div class="project-name">Minecraft Mods</div>
+                <div class="project-description">A collection of mods for minecraft 🪓</div>
+              </div>
+            </div>
+          </a>
+        </nav>
+      </div>
+      <div>
+        > devexcuse
+        <div id="dev-excuse">Could not load dev excuse</div>
+      </div>
+      <div>
+        > <span id="input">res.status(200).send('Hello World!');</span><span id="cursor">▉</span>
+        <div id="output">Hello World!</div>
+      </div>
+    </main>
+  </body>
+
+  <script>
+    const texts = [
+      `console.log('Hello World!');`,
+      `print("Hello World!")`,
+      `System.out.prinln("Hello World!");`,
+      `std::cout << "Hello World!"  << std::endl;`,
+      `Console.WriteLine("Hello World!");`,
+      `println!("Hello World!");`,
+      `printf("Hello World!\\n");`,
+      `puts "Hello World!";`,
+      `echo 'Hello World!';`,
+      `Console.WriteLine("Hello World!");`,
+      `Serial.println("Hello World!");`,
+      `print('Hello World!')`,
+      `logger.info('Hello World!');`,
+      `NSLog(@"Hello World!");`,
+      `console.debug('Hello World!');`,
+      `(;Hello, World!;)`,
+      `X="Hello World!"print X`,
+      `Hello-World!`,
+      `H3ll0_W0r1d!`,
+      `++++++++[>++++[>++>+++>+++>+<<<<-]>+>+>->>+[<]<-]>>.>+.+++++++..+++.>>.++.<-.<.+++.------.--------.>>+.>++.`,
+      `48 65 6c 6c 6f 20 57 6f 72 6c 64 21`,
+      `55 8B EC 6A 0A 68 00 00 00 00 E8 00 00 00 00 58 83 C4 04 C3`,
+      `Hello, World!`,
+      `Hello_World`,
+      `Hello World!%`,
+      `!dlroW olleH>:#,_@`,
+      `say Hello World!`,
+      `puts "Hello World!"`,
+      `fmt.print.Println("Hello World!")`,
+      `cat("Hello World!")`,
+      `disp('Hello World!')`,
+    ];
+
+    const input = document.getElementById('input');
+    const output = document.getElementById('output');
+
+    let currentText = texts[0];
+    let text = "res.status(200).send('Hello World!');";
+
+    const setText = (t) => {
+      input.innerText = t;
+      output.style.display = t === currentText ? 'block' : 'none';
+      text = t;
+    };
+
+    const q = setInterval(() => {
+      if (currentText === text) {
+        if (Math.random() > 0.07) return;
+
+        currentText = texts.sort(() => Math.random() - 0.5)[0];
+        return;
+      }
+
+      for (let i = 1; i <= text.length; i++) {
+        if (text[text.length - i] !== currentText[text.length - i]) {
+          if (Math.random() > 0.8) return;
+
+          setText(text.substring(0, text.length - 1));
+          return;
+        }
+      }
+
+      if (Math.random() > 0.5) return;
+
+      setText(text + currentText[text.length]);
+    }, 50);
+
+    let active = true;
+    document.addEventListener('keydown', (event) => {
+      if (active) {
+        if (event.key === 'c' && event.ctrlKey) {
+          active = false;
+          clearInterval(q);
+        }
+
+        return;
+      }
+
+      console.log(event);
+
+      if (event.key.length === 1) setText(text + event.key);
+      else if (event.key === 'Backspace') setText(text.slice(0, -1));
+      else if (event.key === 'Enter') {
+        event.preventDefault();
+        if (text === 'nvim') {
+          document.location.href = '/experiments/nvim.html';
+        } else if (text === 'code') {
+          document.location.href = '//vscode.dev';
+        } else if (text === 'help') {
+          alert('Run "nvim", "code" or "help"');
+          setText('');
+        } else {
+          setText('');
+        }
+      }
+    });
+
+    const linkElems = document.querySelectorAll('.preview');
+    for (let i = 0; i < linkElems.length; i++) {
+      const elem = linkElems[i];
+
+      elem.addEventListener('mouseenter', () => {});
+      elem.addEventListener('mouseleave', () => {});
+    }
+  </script>
+  <script src="/resources/script/image-cycle.js"></script>
 </html>
