--- a/mods/index.html
+++ b/mods/index.html
@@ -59,7 +59,7 @@
         </div>
       </a>
 
-      <a class="mod" tabindex="0" href="//modrinth.com/mod/random-item/">
+      <a class="mod" tabindex="0" href="//modrinth.com/mod/random-item-block/">
         <img
           src="https://cdn.modrinth.com/data/JOTfJR7m/images/1492395713139ca12cc7c8e476676a7da1da6a9b.png"
           width="100%"
