--- a/mods/index.html
+++ b/mods/index.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Mods</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="style.css" rel="stylesheet" />
     <script src="/resources/script/index.js" type="module"></script>
+
+    <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/resources/icons/safari-pinned-tab.svg" color="#da532c" />
+    <link rel="stylesheet" href="./style.css" />
+
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#da532c" />
   </head>
 
   <body>
