Fix and refactor some stuff

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 data-folder="/mods/images"
                 data-times="6000,12000,2200,1600,10000"
                 data-random="true"
-                data-start="1"
+                src="/mods/images/1.webp"
                 data-filetype="webp"
               />
 
