Update mods page

--- a/mods/index.html
+++ b/mods/index.html
@@ -97,8 +97,35 @@
           </div>
         </div>
       </a>
-    </div>
 
+      <a class="mod" tabindex="0" href="//modrinth.com/mod/confetti-lib/">
+        <img
+          src="https://cdn.modrinth.com/data/5s9W6kVl/images/067d7bb16af4ba00bbab747a9cb4dd71326c9388.png"
+          width="100%"
+          class="image"
+        />
+
+        <div class="mod-overlay">
+          <div class="mod-name">Confetti Lib</div>
+          <div class="mod-description">
+            Adds confetti particles to the game, which can be used by other mods
+          </div>
+        </div>
+      </a>
+
+      <a class="mod" tabindex="0" href="//modrinth.com/mod/confetti-stuff/">
+        <img
+          src="https://cdn.modrinth.com/data/6yBwpkox/images/d25c48b33053cf5f7243c6e924fb2ad81149e5f1.png"
+          width="100%"
+          class="image"
+        />
+
+        <div class="mod-overlay">
+          <div class="mod-name">Confetti Stuff</div>
+          <div class="mod-description">Adds silly confetti related items and blocks 🎉</div>
+        </div>
+      </a>
+    </div>
     <div id="particles"></div>
   </body>
 </html>
