Update tomate launcher page

--- a/tomate-launcher/index.html
+++ b/tomate-launcher/index.html
@@ -58,7 +58,7 @@
     <main>
       <div id="hero-section">
         <h1 id="hero-heading">Tomate Launcher</h1>
-        <div id="hero-subheading">Because you don't need a new Minecraft client</div>
+        <div id="hero-subheading">User friendly modded minecraft launcher</div>
         <div id="quick-links">
           <a class="btn-hollow" href="">Download</a>
           <!-- https://github.com/Tomate0613/tomate-launcher/releases -->
@@ -70,11 +70,16 @@
       </div>
       <div id="details">
         <section>
-          <h2>Preview</h2>
-          <div class="preview">
-            <iframe src="pages/modpacks.html" title="Modpack page"></iframe>
-            <div class="preview-description">This is what the main UI currently looks like</div>
-          </div>
+          <h2>Features</h2>
+          <ul>
+            <li>Launch fabric, neoforge, quilt and lexforge modpacks</li>
+            <li>Import modpacks from modrinth and curseforge</li>
+            <li>Install mods from modrinth and curseforge in a handy side-by-side view</li>
+            <li>Automatically create backups of your modpacks</li>
+            <li>Quickly switch between multiple accounts</li>
+            <li>Launch directly into worlds and servers</li>
+            <li>Keep your modpacks up-to-date</li>
+          </ul>
         </section>
         <section>
           <h2>Development</h2>
@@ -83,7 +88,9 @@
           not yet open source, all the modules it depends on are already available as open source
           projects. We plan to open source the launcher once it reaches a stable state.
 
-          <h3>Functional Packages</h3>
+        </section>
+        <section>
+          <h2>Functional Packages</h2>
 
           Here is a list of packages that are already functional and open source:
 
@@ -93,18 +100,17 @@
             <a href="https://github.com/doublekekse/find-java">Find Java</a>
           </div>
         </section>
-        <section>
-          <h2>Cat Images</h2>
-
-          Here are some random and non related images of cats
-          <div id="images">
-            <img src="images/cat1.webp" alt="AI drawing of a cat in a minecraft world" />
-            <img src="images/cat2.webp" alt="AI drawing of a cat in a minecraft world" />
-            <img src="images/cat3.webp" alt="AI drawing of a cat in a minecraft world" />
-          </div>
-        </section>
+        <!-- <section> -->
+        <!--   <h2>Cat Images</h2> -->
+        <!---->
+        <!--   Here are some random and non related images of cats -->
+        <!--   <div id="images"> -->
+        <!--     <img src="images/cat1.webp" alt="AI drawing of a cat in a minecraft world" /> -->
+        <!--     <img src="images/cat2.webp" alt="AI drawing of a cat in a minecraft world" /> -->
+        <!--     <img src="images/cat3.webp" alt="AI drawing of a cat in a minecraft world" /> -->
+        <!--   </div> -->
+        <!-- </section> -->
       </div>
     </main>
   </body>
 </html>
-
